<resources>
    <string name="app_name">AdderProduct</string>
    <string name="save">Add product</string>
    <string name="definition">Sizes (Optional) | use , between each new size</string>
    <string name="color">Colors</string>
    <string name="image">Images</string>
    <string name="product_detail">Product details:</string>
    <string name="offer_percentage_optional">Offer Percentage (Optional)</string>
    <string name="price">Price</string>
    <string name="product_description_optional">Product description (Optional)</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="general_information">Product general information:</string>
</resources>